# browserpedals

./: .gitignore  LICENSE  MANIFEST.in  README.md  README.ru.md  pyproject.toml  setup.cfg  setup.py
src/browserpedals/: browserpedals.py
src/browserpedals/browserauto/: multitab.py  webdriverex.py
src/browserpedals/browserpedals_options/: browserpedals_options.txt
src/browserpedals/pedals/: usepedals.py
src/browserpedals/pedals/detect/: detectpedals.py
src/browserpedals/pedals/detect/auto_detected_pedals/: auto_detected_pedals.txt
src/browserpedals/pedals/detect/ui/: browserui.py  cmdlineui.py
src/browserpedals/pedals/detect/ui/dialog/js/: ui_check_user_input.js  ui_close.js  ui_on_event.js  ui_open.js  ui_setup_buttons.js  ui_show_progress.js  ui_z_index.js
src/browserpedals/pedals/detect/ui/dialog/js/css/: ui_open.css
src/browserpedals/pedals/detect/ui/i18n/: browserpedals.pot  languages.py
src/browserpedals/pedals/detect/ui/i18n/data_dirs/: appdata.py
src/browserpedals/pedals/detect/ui/i18n/language_names/: language_names.txt
src/browserpedals/pedals/detect/ui/i18n/locale/ru/LC_MESSAGES/: browserpedals.mo  browserpedals.po
src/browserpedals/pedals/detect/ui/start/: browserpedals.html
src/browserpedals/scripts/js/: find_last_played_element.js  get_tab_selection_time.js  jump_back.js  options_page_setup.js  options_page_update.js  pause_play.js  site_setup.js
