[metadata]
name = browserpedals
version = 0.0.3
author = Dmitry Shmygov
author_email = shmygov@rambler.ru
description = Control videos in web browser with pedals
long_description =
    Control any video or audio in a web browser with foot pedals (pause/play or jump back), 
    even when the web browser is not in focus (for example, while typing in text editor).

    | This may be helpful during transcribing (listening to a video and typing the spoken text).
    | The program will attempt to recognize new foot pedals automatically.
    | (Under the hood, the program uses Selenium project to control the browser.)

    To install the program on Linux, open command line and type::

    $ python3 -m pip install --no-cache-dir browserpedals

    To install the program on Windows, open command line or Windows PowerShell and type::

    $ py -m pip install --no-cache-dir browserpedals

    During the installation, ``BrowserPedals`` icon will be created on the Desktop. 
    To run the program, double-click on this icon and wait for new browser window to open. 
    In the browser, home page will open with information about the program and 
    a pop-up dialog for detecting and testing the pedals.
url = https://github.com/shmygov/browserpedals
classifiers =
    Intended Audience :: End Users/Desktop
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: JavaScript
    Environment :: Web Environment
    Topic :: Multimedia :: Video :: Display
    Topic :: Multimedia :: Sound/Audio
    Topic :: Printing
    Topic :: Internet
keywords = browser foot pedals video audio transcribing pause play typing selenium webdriver

[options]
package_dir =
    = src
packages = find:
install_requires =
    wheel
    pyshortcuts
    platformdirs
    importlib-resources
    selenium
    evdev;platform_system=="Linux"
    pywinusb;platform_system=="Windows"
python_requires = >=3.6
include_package_data = True

[options.packages.find]
where = src

